:heavy_check_mark: :bug: Fix overlapping footer due grid gap CSS.
Use margin css property, instead of grid gap property to fix it.

--- a/sources/layout/assets/sass/partials/_skills.scss
+++ b/sources/layout/assets/sass/partials/_skills.scss
@@ -203,8 +203,6 @@ section.my-skills {
 
 @media screen and (max-width: $screen-md) {
     section.my-skills {
-        gap: 4%;
-        grid-template-rows: auto;
         grid-template-columns: 100%;
 
         .container.box {
@@ -216,7 +214,7 @@ section.my-skills {
 
             &:nth-child(even),
             &:nth-child(odd) {
-                margin: 0;
+                margin: 15% 9%;
             }
         }
 
